tests/parser-test-files/bad-files/parse-loop.1.error
error: Malformed loop expression
  --> test:4:16
   |
 4 |  (define f (loop))
   |                 ^ expected a loop body
